--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-slider/ngx-slider": "^2.0.4",
     "@angular/animations": "^14.2.0",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
@@ -20,6 +21,7 @@
     "@angular/router": "^14.2.0",
     "ng-angular-popup": "^0.2.0",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.6.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
