--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
   "dependencies": {
     "@angular-slider/ngx-slider": "^2.0.4",
     "@angular/animations": "^14.2.0",
+    "@angular/cdk": "^14.2.6",
     "@angular/common": "^14.2.0",
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
+    "@angular/fire": "^7.4.1",
     "@angular/forms": "^14.2.0",
+    "@angular/material": "^14.2.6",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "chart.js": "^3.9.1",
     "ng-angular-popup": "^0.2.0",
+    "ngx-pagination": "^6.0.2",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.6.5",
     "tslib": "^2.3.0",
